--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -12,3 +12,6 @@ dependencies:
   - pip:
       - mlflow==2.8.1
       - wandb==0.16.0
+      - notebook==7.1.2
+      - ydata-profiling==4.7.0
+      - ipywidgets==8.1.2
